--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -31,7 +31,7 @@
         <a class="navbar-brand custom-txt" href="/">
             <img th:src="@{/images/banner_admiral_logo.png}"
                  th:width="235" th:height="65" class="img-responsive" alt="admiral_logo.png"/>
-            Timesheet Portal
+            Time Sheet Portal
         </a>
 
         <div class="container-fluid" id="navbarSupportedContent">
@@ -82,15 +82,13 @@
                 <div sec:authorize="hasAuthority('ROLE_MANAGER')">
                     <a class="btn btn-light" href="/">Home</a>
 
-                    <a class="btn btn-light" th:href="@{/Reviews}">View Timesheets</a>
+                    <a class="btn btn-light" th:href="@{/Reviews}">View Time Sheets</a>
 
                 </div>
 
-                <!--            sec:authentication="principal.authorities"-->
                 <div sec:authorize="hasAuthority('ROLE_CONTRACTOR')">
                     <a class="btn btn-light" href="/">Home</a>
-                    <a class="btn btn-light" th:href="@{/contractorView}">New Timesheet</a>
-<!--                    <a class="btn btn-light">Old Timesheets WIP</a>-->
+                    <a class="btn btn-light" th:href="@{/contractorView}">New Time Sheet</a>
                 </div>
 
             </div>
