--- a/src/main/resources/templates/review_approval.html
+++ b/src/main/resources/templates/review_approval.html
@@ -70,18 +70,18 @@
 
 
                         <div class="form-group custom-label">
-                            <label th:for="initative">Initative
+                            <label th:for="initative">Initiative
                                 <input
                                         class="form-control"
-                                        th:field="*{initative}"
+                                        th:field="*{initiative}"
                                         type="number" pattern="/d*"/>
                             </label>
                         </div>
 
 
                         <div class="alert alert-danger"
-                             th:errors="*{initative}"
-                             th:if="${#fields.hasErrors('initative')}">
+                             th:errors="*{initiative}"
+                             th:if="${#fields.hasErrors('initiative')}">
                              Error: Please enter a number between 1-3.
                         </div>
 
