--- a/src/main/resources/templates/timesheet_view.html
+++ b/src/main/resources/templates/timesheet_view.html
@@ -9,7 +9,7 @@
     <div class="starter-template">
 
 
-        <div id=missingTimesheetMessage th:if="${TimesheetKey}==  null">
+        <div id=missingTimeSheetMessage th:if="${TimeSheetKey}==  null">
             <div>No matching Time Sheet</div>
         </div>
 
@@ -20,22 +20,25 @@
             <table>
                 <thead>
                 <tr>
-                    <th>Name</th>
-                    <th> Agency</th>
-                    <th> Days Worked</th>
-                    <th> Overtime</th>
-                    <th> Week finished</th>
+                    <th> Name </th>
+                    <th> Agency </th>
+                    <th> Days Worked </th>
+                    <th> Overtime </th>
+                    <th> Week finished </th>
                 </tr>
                 </thead>
+
                 <tbody>
+
                 <tr>
                     <!--                    th:each="timeSheet: ${TimesheetKey}">-->
-                    <td><span th:text="${TimesheetKey.contractor.user.firstname} + ' '
-                                       ${TimesheetKey.contractor.user.surname}"></span></td>
-                    <td><span th:text="${TimesheetKey.contractor.agency.name}"></span></td>
-                    <td><span th:text="${TimesheetKey.daysWorked}"></span></td>
-                    <td><span th:text="${TimesheetKey.overtime}"></span></td>
-                    <td><span th:text="${TimesheetKey.week_finish}"></span></td>
+                    <td><span th:text="${TimeSheetKey.contractor.user.firstname} + ' '
+                                       ${TimeSheetKey.contractor.user.surname}"></span></td>
+                    <td><span th:text="${TimeSheetKey.contractor.agency.name}"></span></td>
+                    <td><span th:text="${TimeSheetKey.daysWorked}"></span></td>
+                    <td><span th:text="${TimeSheetKey.overtime}"></span></td>
+                    <td><span th:text="${TimeSheetKey.week_finish}"></span></td>
+                </tr>
 
 
                 </tbody>
